<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:weightSum="1">
    <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_weight="0.06" android:layout_gravity="center_vertical">
        <ImageView android:layout_width="wrap_content" android:id="@+id/imageView1" android:layout_height="wrap_content" android:src="@drawable/icon" android:layout_gravity="center_vertical"></ImageView>
        <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/app_name" android:layout_height="wrap_content" android:layout_gravity="center_vertical"></TextView>
    </LinearLayout>
    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/about_author" android:layout_gravity="bottom" android:layout_height="wrap_content"></TextView>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="right" android:text="@string/about_author_name"></TextView>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/about_base64_routines_by"></TextView>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/about_base64_name" android:layout_gravity="right"></TextView>
    
</LinearLayout>
