<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:weightSum="1">
    <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/first_run_welcome" android:layout_width="fill_parent" android:paddingBottom="2sp"></TextView>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/first_run_description" android:paddingBottom="3sp"></TextView>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="right" android:id="@+id/firstRunContinue" android:text="@string/first_run_continue"></Button>
    <ImageView android:paddingBottom="2dp" android:paddingTop="2dp" android:scaleType="fitXY" android:layout_width="fill_parent" android:src="@android:drawable/divider_horizontal_dark" android:layout_height="wrap_content" android:paddingLeft="5dp" android:paddingRight="5dp"></ImageView>
    <ListView android:layout_width="fill_parent" android:id="@+id/firstRunIdeasList" android:layout_height="fill_parent"></ListView>
    
</LinearLayout>
